--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -1,23 +1,24 @@
 <% if (index){ %>
     <script>
-        location.href = '<%= config.url %>/<%= page.posts.data[0].path %>';
+        location.href = '<%- url_for("/") %><%= page.posts.data[0].path %>';
     </script>
 <% } else { %>
 
     <% var last; %>
-
-    <section class="archives">
-        <% page.posts.each(function(post, i){ %>
-            <%- partial('archive-post', {post: post, even: i % 2 == 0}) %>
-        <% }) %>
-    </section>
-    <% if ( page.total > 1 ){ %>
-    <nav class="page-nav">
-        <%- paginator({
-            prev_text: 'Newer',
-            next_text: 'Older'
-        }) %>
-    </nav>
-    <% } %>
+    <div class="global-width">
+        <section class="archives">
+            <% page.posts.each(function(post, i){ %>
+                <%- partial('archive-post', {post: post, even: i % 2 == 0}) %>
+            <% }) %>
+        </section>
+        <% if ( page.total > 1 ){ %>
+        <nav class="page-nav">
+            <%- paginator({
+                prev_text: 'Newer',
+                next_text: 'Older'
+            }) %>
+        </nav>
+        <% } %>
+    </div>
 
 <% } %>
