--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -34,7 +34,7 @@
 </head>
 <body class="site">
     <header class="site-header">
-        <h1 class="site-title"><a href="<%- url_for() %>"><%= config.title %></a></h1>
+        <h1 class="site-title"><a href="<%- url_for("/") %>"><%= config.title %></a></h1>
         <nav class="site-nav">
             <ul class="nav">
                 <% if ( theme.menu ){ for ( var key in theme.menu ){ %>
