--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -9,12 +9,12 @@
     position relative
     z-index 100
     margin spacing-unit 0
-    font-size font-size-large
+    font-size font-size-larger
     line-height 1
     font-weight lighter
     text-align center
     @media mq-pc
-      font-size font-size-extra-large
+      font-size font-size-largest
   .site-subtitle
     font-size font-size
     font-weight normal
