--- a/layout/_partial/post/category.ejs
+++ b/layout/_partial/post/category.ejs
@@ -1,8 +1,8 @@
 <% if (post.categories && post.categories.length){ %>
-  <div class="article-category">
+  <div class="<%= class_name %> categories">
     <%- list_categories(post.categories, {
       show_count: false,
-      class: 'article-category',
+      class: 'category',
       style: 'none',
       separator: '-'
     }) %>
