--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -4,17 +4,18 @@
 
 global-reset()
 
-site-width = 700px
+site-width = 600px
 spacing-unit = 20px
 gallery-height = 400px
 
 font-sans = "Open Sans", sans-serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-size-unit = 2px
-font-size = 16px
+font-size = 18px
 font-size-small = font-size - font-size-unit
 font-size-large = font-size + font-size-unit
-font-size-extra-large = font-size * 3
+font-size-larger = font-size * 2
+font-size-largest = font-size * 3
 line-height = 1.6
 
 color-brand = tomato
