--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -108,6 +108,11 @@
       width: 100%
       height: 100%
       margin-top: 0
+  ul
+    li
+      margin 0 0 10px 0
+      ul
+        margin 10px 0
 
 .article-nav
   margin (spacing-unit * 4) 0 (spacing-unit * 2)
