--- a/source/css/_partial/nav.styl
+++ b/source/css/_partial/nav.styl
@@ -12,7 +12,7 @@
       display inline-block
       a
         display block
-        padding 0 (spacing-unit / 2)
+        padding 0 spacing-unit-half
         font-size font-size-small
         text-transform uppercase
         color #999
@@ -21,12 +21,12 @@
 
 .page-nav
   position relative
-  padding 0 (spacing-unit / 2)
+  padding 0 spacing-unit-half
   background #333
   .page-number
   .extend
     display inline-block
-    padding spacing-unit (spacing-unit / 2)
+    padding spacing-unit spacing-unit-half
     color #eee
     &.current
       color color-brand
@@ -36,6 +36,6 @@
     background transparent
     .page-number
     .extend
-      padding (spacing-unit / 2)
+      padding spacing-unit-half
       color color-text-light
 
