--- a/source/css/_partial/widget.styl
+++ b/source/css/_partial/widget.styl
@@ -3,7 +3,7 @@
   padding spacing-unit * 2
   text-align center
   list-style none
-  @media mq-tablet
+  @media mq-pc
     margin 0 (spacing-unit * -1)
     padding-left 0
     padding-right 0
@@ -18,7 +18,7 @@
       margin-top 0
       padding-top 0
       border-top-width 0
-    @media mq-tablet
+    @media mq-pc
       float left
       width 33%
       margin 0
