--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -6,6 +6,7 @@ global-reset()
 
 site-width = 600px
 spacing-unit = 20px
+spacing-unit-half = 20px / 2
 gallery-height = 400px
 
 font-sans = "Open Sans", sans-serif
@@ -40,7 +41,7 @@ h2
   font-size 1.2em
 ul, ol, dl
   margin spacing-unit 0
-  padding-left 40px
+  padding-left 20px
 a
   color color-text
   text-decoration none
