Contents : Seperating Margin Modified

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -66,12 +66,12 @@
   h2
   h3
   h4
-    margin spacing-unit * 2 0 spacing-unit
+    margin (spacing-unit + spacing-unit-half) 0
   hr
     border-width 1px 0 0 0
     border-style dashed
     border-color color-border
-    margin spacing-unit * 2 0
+    margin (spacing-unit + spacing-unit-half) 0
   blockquote
     overflow hidden
     margin 0
