Archive / Widget : Modify Grid

--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -3,16 +3,24 @@
 .archives
   clearfix()
   @media mq-tablet
-    margin 0 0 spacing-unit (spacing-unit * -1)
+    margin 0 spacing-unit spacing-unit 0
+  @media mq-pc
+    margin 0 0 spacing-unit (spacing-unit*-1)
 .archive-article
+  border-top 1px solid #eee
+  &:first-child
+    border-top 0
   &:nth-child(even)
     background #eee
   @media mq-tablet
     float left
     margin-top spacing-unit
-    width 25%
+    width 50%
+    border-top-width 0
     &:nth-child(even)
       background transparent
+  @media mq-pc
+    width 33.3%
   .archive-article-inner
     height 100%
     overflow hidden
@@ -22,8 +30,10 @@
     @media mq-tablet
       position relative
       margin-left spacing-unit
-      height 200px
+      height 150px
       mask()
+    @media mq-pc
+      height 200px
     .archive-article-header
       padding spacing-unit
       height 100%
