--- a/source/css/_partial/widget.styl
+++ b/source/css/_partial/widget.styl
@@ -1,6 +1,6 @@
 .site-widget
   margin 0
-  padding spacing-unit * 2
+  padding spacing-unit
   text-align center
   list-style none
   @media mq-pc
@@ -9,8 +9,8 @@
     padding-right 0
     clearfix()
   .widget
-    margin-top spacing-unit * 2
-    padding-top spacing-unit * 2
+    margin-top spacing-unit
+    padding-top spacing-unit
     border-top 1px solid color-border
     text-align left
     overflow hidden
