--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -91,7 +91,18 @@
     <script src="/libs/jquery-1.11.3.min.js" type="text/javascript"></script>
     <% if ( theme.fancybox ) {%>
     <script src="/libs/fancybox/jquery.fancybox.js" type="text/javascript"></script>
-    <%}%>
+    <% } %>
     <script src="/js/site_init.js" type="text/javascript"></script>
+    <% if ( theme.ga_id ) { %>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', '<%= theme.ga_id %>', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <% } %>
 </body>
 </html>
