Remove horizontal padding on header

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,7 +1,7 @@
 .site-header
   position relative
   z-index 1
-  padding spacing-unit * 2
+  padding spacing-unit * 2 0
   background-color #333
   a
     color #fff
