--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -64,6 +64,7 @@ input, textarea, keygen, select, button
   font-size font-size
   line-height line-height
   color color-text
+  word-break break-word
   -webkit-font-smoothing antialiased
 
 .site-body
