--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -4,7 +4,7 @@
 
 global-reset()
 
-site-width = 600px
+site-width = 720px
 spacing-unit = 20px
 spacing-unit-half = 20px / 2
 gallery-height = 400px
@@ -14,6 +14,7 @@ font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-size-unit = 2px
 font-size = 18px
 font-size-small = font-size - font-size-unit
+font-size-smaller = font-size - (font-size-unit * 2)
 font-size-large = font-size + font-size-unit
 font-size-larger = font-size * 2
 font-size-largest = font-size * 3
