--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -14,7 +14,7 @@ highlight-purple = #8959a8
 
 $code-block
   background highlight-background
-  margin 0
+  margin spacing-unit 0
   padding spacing-unit spacing-unit * 1
   border-style solid
   border-color color-border
@@ -30,7 +30,7 @@ $line-numbers
 .article-content
   pre, code
     font-family font-mono
-    font-size font-size-small
+    font-size font-size-smaller
   code
     background rgba(0,0,0,.08)
     padding 0 0.3em
@@ -65,7 +65,7 @@ $line-numbers
       text-align right
       padding-right 20px
     .line
-      height font-size * line-height
+      height font-size * 1.3
   .gist
     margin 0
     border-style solid
