Fix table style issue

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -114,7 +114,7 @@
       margin 0 0 spacing-unit-half 0
       ul
         margin spacing-unit-half 0
-  table
+  > table
     margin: spacing-unit auto
     padding: 0
     border-collapse: collapse
